# students_research

./: .gitignore  CMakeLists.txt  README.md
cmake/: compiler.cmake  macro_helpers.cmake  target_arch.cmake
otsu_cq/: CMakeLists.txt  color_quantization.cpp  main.cpp
sample/helloworld/: CMakeLists.txt
